--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -2,7 +2,7 @@ Source: ucs-school-import
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Build-Depends: debhelper (>> 10), univention-config-dev, ucslint
+Build-Depends: debhelper (>> 10), univention-config-dev, ucslint, python-sphinx, make, python2.7-doc
 Standards-Version: 3.8.2
 XS-Python-Version: 2.7
 
@@ -98,6 +98,18 @@ Architecture: all
 Depends: ${misc:Depends}
 Description: UCS@school: Common files for UCS@school API client and server
  This package provides common files of the RESTful HTTP API client and server.
+ .
+ This package is part of Univention Corporate Server (UCS),
+ an integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+Homepage: https://www.univention.de/produkte/ucsschool/
+
+Package: ucs-school-import-http-api-doc
+Architecture: all
+Description: UCS@school: HTTP API documentation
+ This package provides HTML documentation of the HTTP API client and server
+ installation, configuration und usage.
  .
  This package is part of Univention Corporate Server (UCS),
  an integrated, directory driven solution for managing
