--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-users
 fix: 
 desc: |
  * The UDM flag <emphasis>pwdChangeNextLogin</emphasis> toggled each time when the user's password has been reset with activated checkbox that should have forced the user to change the password on next login (Bug #46012).
-bug: [46012]
+ * Add ucr variable autosearch_on_change to control reload of user lists when switching school or class (Bug #46905)
+bug: [46012, 46905]
