Bug #46905: Update advisories for ucs-school-umc-groups/users

--- a/doc/errata/staging/ucs-school-umc-groups.yaml
+++ b/doc/errata/staging/ucs-school-umc-groups.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-groups
-fix: 
+fix: 7.0.0-6A~4.2.0.201804300850
 desc: |
  * Overhaul ucr variable descriptions as statet in comment #14 of (Bug #46905)
 bug: [46905]
