--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [0]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 
+fix: 16.0.1-27A~4.3.0.201804251526
 desc: |
  * User property verification checks are executed in dry-run again (Bug #46572).
  * A dependency solver was introduced, that will sort the order of autogeneration of attributes from schemes so that they can depend on each other (Bug #42137).
