--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -7,4 +7,5 @@ fix: 10.0.2-1A~4.3.0.201804261344
 desc: |
  * Instead of showing an empty list of computer rooms there is now a dialog asking if the user wants to create one if authorized to do so. (Bug #43080)
  * Remove free printing option from computer room settings due to (Bug #35076)
-bug: [43080, 35076]
+ * Rename file share restriction options in settings dialog depending on if selected room is in exam mode (Bug #43037)
+bug: [43080, 35076, 43037]
