--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-computerroom
 fix: 9.0.9-1A~4.2.0.201804240940
 desc: |
  * Instead of showing an empty list of computer rooms there is now a dialog asking if the user wants to create one if authorized to do so. (Bug #46872)
+ * If no rooms are present show the dialog asking to create one only if only one school can be chosen. (Bug #46872)
 bug: [46872]
