Bug #46795: Update advisory

--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [0]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-import
-fix: 
+fix: 1.0.1-1A~4.3.0.201805311111
 desc: |
  * Added buttons to the dry run overview and error pages to return to the modules overview page (Bug #46795).
 bug: [46795]
