--- a/ucs-school-import/debian/rules
+++ b/ucs-school-import/debian/rules
@@ -29,7 +29,7 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
-PO_FILES := $(shell find udm_hook syntax -name '*.po')
+PO_FILES := $(shell find udm_hook syntax modules -name '*.po')
 MO_FILES := $(PO_FILES:%.po=%.mo)
 
 APIDOCSRC_FILES := $(shell find usr/share/doc/ucs-school-import-http-api/source/ -name '*.rst' -o -name '*.png')
