Bug #46832: add support for Role resource
(cherry picked from commit ef79132)

--- a/ucs-school-umc-import/debian/control
+++ b/ucs-school-umc-import/debian/control
@@ -15,7 +15,7 @@ Package: ucs-school-umc-import
 Architecture: all
 Depends: ${misc:Depends},
  univention-management-console-server,
- ucs-school-import-http-api-client
+ ucs-school-import-http-api-client (>= 16.0.2-1)
 Description: Automatic UCS@school user import
  Automatic UCS@school user import
  .
