Bug #47134: gunicorn listens on port 9898 by default

--- a/ucs-school-import/debian/ucs-school-import-http-api.service
+++ b/ucs-school-import/debian/ucs-school-import-http-api.service
@@ -9,7 +9,7 @@ WantedBy=multi-user.target
 User=root
 Group=root
 Restart=always
-ExecStart=/usr/bin/gunicorn --workers=4 --bind=127.0.0.1:8000 --timeout=60 ucsschool.http_api.app.wsgi:application --name ucs-school-import --user root --group root
+ExecStart=/usr/bin/gunicorn --config /etc/gunicorn.d/ucs-school-import ucsschool.http_api.app.wsgi:application
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 WorkingDirectory=/var/spool/ucs-school-import/
