--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,8 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-computerroom
-fix: 9.0.9-2A~4.2.0.201805300955
+fix: 9.0.9-3A~4.2.0.201806070855
 desc: |
- * Instead of showing an empty list of computer rooms there is now a dialog asking if the user wants to create one if authorized to do so. (Bug #46872)
- * If no rooms are present show the dialog asking to create one only if only one school can be chosen. (Bug #46872)
+ * Instead of showing an empty list of computer rooms there is now a dialog asking if the user wants to create one. The dialog is only shown if the user is authorized to create a room and the module manages only a single school. (Bug #46872)
 bug: [46872]
