--- a/doc/errata/staging/ucs-school-umc-rooms.yaml
+++ b/doc/errata/staging/ucs-school-umc-rooms.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-rooms
-fix: 14.0.1-1A~4.2.0.201805300953
+fix: 14.0.1-2A~4.2.0.201806070853
 desc: |
- * Offer creation of a room if the fetched list of rooms for the selected school is empty.
+ * Offer creation of a room if the fetched list of rooms for the selected school is empty. (Bug #46872)
 bug: [46872]
