--- a/ucs-school-metapackage/debian/control
+++ b/ucs-school-metapackage/debian/control
@@ -30,6 +30,7 @@ Recommends:
  ucs-school-umc-csv-import,
  ucs-school-umc-groups,
  ucs-school-umc-users,
+ ucs-school-umc-lists,
  ucs-school-umc-rooms,
  ucs-school-umc-wizards,
  ucs-school-umc-exam-master,
@@ -81,6 +82,7 @@ Recommends:
  ucs-school-umc-lessontimes,
  ucs-school-umc-printermoderation,
  ucs-school-umc-users,
+ ucs-school-umc-lists,
  ucs-school-umc-rooms,
  ucs-school-webproxy,
 Description: UCS@school meta package for UCS DC Slave System
@@ -133,6 +135,7 @@ Recommends:
  ucs-school-umc-lessontimes,
  ucs-school-umc-printermoderation,
  ucs-school-umc-users,
+ ucs-school-umc-lists,
  ucs-school-umc-rooms,
  ucs-school-umc-wizards,
  ucs-school-webproxy,
