--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,8 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
-fix: 10.0.2-15A~4.2.0.201806040914
+fix: 10.0.2-16A~4.2.0.201806191313
 desc: |
  * Internal enhancement: Support for the deepcopy operation was added to all ucsschool.lib objects (Bug #47092).
-bug: [47092]
+ * Internal enhancement: Support for setting the owner of a logfile was added (Bug #46829).
+bug: [47092, 46829]
