--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,9 +3,10 @@ release: "4.3"
 version: [0]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix: 11.0.1-11A~4.3.0.201806190902
+fix: 11.0.1-12A~4.3.0.201806191349
 desc: |
  * Internal enhancement: Support for the deepcopy operation was added to all ucsschool.lib objects (Bug #46970).
  * Removing '+' from the SambaForceGroup in shares. Old shares will retain the '+' unless renamed or manually edited.
    Further details about the '+'-option can be found in the official samba documentation.
-bug: [46970, 45447]
+ * Internal enhancement: Support for setting the owner of a logfile was added (Bug #45164).
+bug: [46970, 45447, 45164]
