--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -6,4 +6,5 @@ src: ucs-school-metapackage
 fix: 11.0.1-3A~4.3.0.201806131337
 desc: |
  * The new module "Classlists" has been added to the recommended packages (Bug #47017).
-bug: [47017]
+ * Move ucsschool specific join scripts into ucs-schol-metapackage to avoid join errors on non school slave systems (Bug #47226).
+bug: [47017, 47226]
