--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -7,4 +7,4 @@ fix: 11.0.1-13A~4.3.0.201806271007
 desc: |
  * Internal enhancement: Support for the deepcopy operation was added to all ucsschool.lib objects (Bug #46970).
  * Internal enhancement: Support for setting the owner of a logfile was added (Bug #45164).
-bug: [46970, 45447, 45164]
+bug: [46970, 45164]
