--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-users
 fix: 14.0.2-4A~4.3.0.201805251229
 desc: |
- * Add UCR variable ucsschool/passwordreset/autosearch_on_change to control reload of user lists when switching school or class (Bug #45601)
- * Change representation of password expiration column in password reset modules to enhance user experience.
+ * Add UCR variable <envar>ucsschool/passwordreset/autosearch_on_change</envar> to control reload of user lists when switching school or class (Bug #45601).
+ * The representation of the password expiration column within the password reset modules has been enhance to improve user experience (Bug #42212).
 bug: [45601, 42212]
