--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -5,5 +5,8 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
 fix: 7.0.4-22A~4.2.0.201804261315
 desc: |
- * Set room combobox to null so users have to choose a room before proceeding in the exam wizard.
+ * When starting an exam, users often overlooked selecting the correct room so
+   that the exam was started for the wrong computer/room. The selection field
+   for the room in the exam wizard is now empty and the user must explicitly
+   select a room, to prevent the described issue (Bug #46883).
 bug: [46883]
